src/index.css
@import "tailwindcss";

@theme {
    --color-primary: #064E3B;
    --color-primary-dark: #003527;
    --color-secondary: #657C72;
    --color-tertiary: #6B342D;
    --color-neutral: #F9FAFB;
    --color-accent-soft: #CCE6D9;
    --color-surface-primary: #F8F9FA;
    --color-surface-elevated: #F3F4F5;
    /* Cards, raised elements */
    --font-headline: 'Manrope';
    --font-body: 'Inter';
    --font-label: 'Inter';
    --radius-full: 9999px;
}

body {
    font-family: Inter;
}

.hamburger-line {
    position: absolute;
    left: 0;
    right: 0;
    height: 2px;
    border-radius: var(--radius-full);
    background-color: var(--color-primary);
    transition: transform 0.3s ease, opacity 0.3s ease;
}

.hamburger-line:nth-child(1) {
    top: 0;
}

.hamburger-line:nth-child(2) {
    top: 50%;
    transform: translateY(-50%);
}

.hamburger-line:nth-child(3) {
    bottom: 0;
}

.hamburger.open .hamburger-line:nth-child(1) {
    top: 50%;
    transform: rotate(45deg);
}

.hamburger.open .hamburger-line:nth-child(2) {
    opacity: 0;
}

.hamburger.open .hamburger-line:nth-child(3) {
    top: 50%;
    transform: rotate(-45deg);
}

.hamburger.closed .hamburger-line:nth-child(1) {
    transform: none;
}

.hamburger.closed .hamburger-line:nth-child(3) {
    transform: none;
}

.landing-search__inputs {
    width: 100%;
    height: 55;
    padding: 18px 16px 18px 48px;
    opacity: 1;
    border-radius: 16px;
    background-color: var(--color-surface-elevated);
    color: #BFC9C3;
}

.landing-search__btn {
    box-shadow: 0px 4px 6px -4px #064E3B33;

    box-shadow: 0px 10px 15px -3px #064E3B33;

}

